# platform.adaptation.xf86-input-gesture

./: Makefile.am  autogen.sh  configure.ac  project.config  xorg-gesture.pc.in
man/: Makefile.am  gesture.man
packaging/: xf86-input-gesture.spec  xorg-x11-drv-gesture.spec
src/: Makefile.am  gesture.c  gesture.h
